devel
-----

* Added JWT secret rotation (Enterprise only).

* The `--dump-options` command for arangod now also provides the "components"
  attribute that shows for which components (agent, coordinator, db server,
  single server) an option is relevant. Additionally, each option provides an "os" 
  attribute that indicates on which operating systems the option is supported.
  This can be used when reading the options descriptions programmatically, e.g.
  for auto-generating the documentation.

* Add update-insert operation similar to existing replace-insert functionality of insert.

  Like for the existing variant the `overwrite` flag has to be set to true.
  Then the update version can be selected by setting the `overwriteMode` to `"update"`.

* Updated ArangoDB Starter to 0.14.13.

* Added HotBackup events into auditing.

* Removed an unnecessary and wrong request from within the Web UI to the
  `/_admin/cluster/health` API. This lead to unauthorized network calls.

* Allowed PHRASE function to process empty arrays without generating error.

* Fix issue #10897, using COLLECT in a subquery could lead to unexpected and
  confusing error messages

* Internal statistics API now uses integer timestamps instead of doubles. The
  old behaviour sometimes leads to failed requests because of parse errors
	which occured in the internal used JavaScript joi library.

* Support trailing commas in AQL object and array definitions as follows:

      [ 1, 2, 3, ]
      { a: 1, b: 2, }

  In previous versions of ArangoDB, such trailing commas resulted in a query
  parse error.

* Make sure heartbeats are actually sent out and received every second.

* React dev mode now supports hot reload combined with proxy for development.

* Added read-write-locks for parallel move shard operations.

* Fixed issue #10896: Variables defined inside spliced subqueries would leak
  into following COLLECT ... INTO var operations.
