@@ -881,6 +881,58 @@ function ahuacatlFunctionsTestSuite () {
     },
 
 ////////////////////////////////////////////////////////////////////////////////
+/// @brief test replace_nth function
+////////////////////////////////////////////////////////////////////////////////
+
+    testReplaceNthCxx : function () {
+
+      var testArray = [
+        null,
+        true,
+        1,
+        3.5,
+        [],
+        [7, 6],
+        { },
+        { foo: 'bar'}
+      ];
+
+      for (let replaceIndex = 0;  replaceIndex <= testArray.length + 2; replaceIndex ++) {
+        for (let replaceValue = 0;  replaceValue < testArray.length; replaceValue ++) {
+          const msg = `Index: ${replaceIndex} ReplaceValue: ${replaceValue}`;
+          let actual = getQueryResults("RETURN NOOPT(REPLACE_NTH(@testArray, @which, @replaceValue, @defaultValue))",
+                                   {
+                                     testArray: testArray,
+                                     which: replaceIndex,
+                                     replaceValue: testArray[replaceValue],
+                                     defaultValue: testArray[replaceValue]
+                                   }
+                                  );
+          if (replaceIndex === testArray.length + 2) {
+            let expectValue = testArray[replaceValue];
+            if (expectValue === undefined) {
+              expectValue = null;
+            }
+            assertEqual(actual[0][testArray.length + 1], expectValue, msg);
+          }
+          assertEqual(actual[0][replaceIndex], testArray[replaceValue], msg);
+        }
+      }
+    },
+
+////////////////////////////////////////////////////////////////////////////////
+/// @brief test replace_nth function
+////////////////////////////////////////////////////////////////////////////////
+
+    testReplaceNthInvalidCxx : function () {
+      assertQueryError(errors.ERROR_QUERY_FUNCTION_ARGUMENT_NUMBER_MISMATCH.code, "RETURN NOOPT(REPLACE_NTH(null, null))"); 
+      assertQueryError(errors.ERROR_QUERY_FUNCTION_ARGUMENT_TYPE_MISMATCH.code, "RETURN NOOPT(REPLACE_NTH(null, null, { }))");
+      assertQueryError(errors.ERROR_QUERY_FUNCTION_ARGUMENT_TYPE_MISMATCH.code, "RETURN NOOPT(REPLACE_NTH([], -1, { }))");
+      assertQueryError(errors.ERROR_QUERY_FUNCTION_ARGUMENT_TYPE_MISMATCH.code, "RETURN NOOPT(REPLACE_NTH([], null, { }))");
+      assertEqual([ null ], getQueryResults("RETURN NOOPT(REPLACE_NTH(null, 1, 1))")); 
+    },
+
+////////////////////////////////////////////////////////////////////////////////
 /// @brief test length function
 ////////////////////////////////////////////////////////////////////////////////
 
@@ -4073,4 +4125,3 @@ function ahuacatlFunctionsTestSuite () {
 jsunity.run(ahuacatlFunctionsTestSuite);
 
 return jsunity.done();
-
